# yt_quicklook

./: .gitignore  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
src/yt_quicklook/: __init__.py  cli.py  sampling.py
tests/: test_package.py
